# voxenote

./: .cursorignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TESTS_NEEDED.md  config.example.yaml  pyproject.toml
.cursor/rules/: 00-overview.mdc  01-architecture.mdc  02-python-style.mdc  03-cli-ux.mdc  04-testing.mdc
src/voxnote/: analyze.py  audio_metadata.py  audio_prepare.py  cache_paths.py  cli.py  collect_plan.py  config.py  doctor.py  models.py  organize.py  runtime.py  state.py  transcribe.py  vad_trim.py  workflow.py
src/voxnote/assets/denoise/: README.md
tests/: test_analyze_truncation.py  test_collect_plan.py  test_config_and_state.py  test_paths_and_archive.py
